[tool.poetry]
name = "seriesbr"
version = "0.1.8"
description = "A Python library to interact with brazilian time series databases"
authors = ["Phelipe Teles <phelipe_teles@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.27.1"
pandas = "^1.3.5"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
responses = "^0.16.0"
pytest = "^6.2.5"
freezegun = "^1.1.0"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
