[tool.poetry]
name = "seriesbr"
version = "1.0.0"
description = "A Python library to interact with brazilian time series databases"
authors = ["Phelipe Teles <phelipe_teles@hotmail.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://seriesbr.readthedocs.io/"
repository = "https://github.com/phelipetls/seriesbr"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.3.5"
python-dateutil = "^2.8.2"
rope = "^0.22.0"

[tool.poetry.dev-dependencies]
responses = "^0.16.0"
pytest = "^6.2.5"
freezegun = "^1.1.0"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
rope = "^0.22.0"
types-python-dateutil = "^2.8.6"
types-requests = "^2.27.7"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
